# NeverNet

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/apps/db-migrator/: Cargo.toml
backend/apps/db-migrator/src/: main.rs
backend/apps/demo-seed/: Cargo.toml
backend/apps/demo-seed/src/: main.rs
backend/apps/edge-api/: Cargo.toml
backend/apps/edge-api/src/: app_state.rs  config.rs  error.rs  main.rs
backend/apps/edge-api/src/auth/: handlers.rs  mod.rs  models.rs  service.rs
backend/apps/edge-api/src/calendar/: handlers.rs  mod.rs  models.rs  service.rs
backend/apps/edge-api/src/categories/: handlers.rs  mod.rs  models.rs  service.rs
backend/apps/edge-api/src/dashboard/: handlers.rs  mod.rs  models.rs  service.rs
backend/apps/edge-api/src/events/: handlers.rs  mod.rs  models.rs  repository.rs  service.rs
backend/apps/edge-api/src/exports/: mod.rs  models.rs  service.rs
backend/apps/edge-api/src/reports/: handlers.rs  mod.rs  models.rs  service.rs
backend/apps/edge-api/src/settings/: handlers.rs  mod.rs  models.rs  repository.rs  service.rs
backend/apps/edge-api/src/shared/: api.rs  auth.rs  grpc.rs  http.rs  mod.rs  request_context.rs
backend/apps/edge-api/src/users/: models.rs  repository.rs
backend/apps/event-command-svc/: Cargo.toml
backend/apps/event-command-svc/src/: app_state.rs  config.rs  error.rs  main.rs  models.rs  repository.rs  validation.rs
backend/apps/event-query-svc/: Cargo.toml
backend/apps/event-query-svc/src/: app_state.rs  config.rs  error.rs  main.rs  models.rs  repository.rs
backend/apps/identity-svc/: Cargo.toml
backend/apps/identity-svc/src/: config.rs  error.rs  main.rs
backend/apps/identity-svc/src/auth/: mod.rs  models.rs  repository.rs  service.rs  validation.rs
backend/apps/identity-svc/src/settings/: models.rs  repository.rs  service.rs
backend/apps/identity-svc/src/users/: repository.rs
backend/apps/infra-bootstrap/: Cargo.toml
backend/apps/infra-bootstrap/src/: main.rs
backend/apps/report-svc/: Cargo.toml
backend/apps/report-svc/src/: app_state.rs  config.rs  error.rs  main.rs  models.rs  repository.rs
backend/apps/worker/: Cargo.toml
backend/apps/worker/src/: main.rs
backend/crates/cache/: Cargo.toml
backend/crates/cache/src/: lib.rs
backend/crates/contracts/: Cargo.toml  build.rs
backend/crates/contracts/proto/: event_command.proto  event_query.proto  identity.proto  reporting.proto
backend/crates/contracts/src/: lib.rs
backend/crates/messaging/: Cargo.toml
backend/crates/messaging/src/: lib.rs
backend/crates/observability/: Cargo.toml
backend/crates/observability/src/: lib.rs
backend/crates/persistence/: Cargo.toml
backend/crates/persistence/src/: lib.rs
backend/crates/shared-kernel/: Cargo.toml
backend/crates/shared-kernel/src/: auth.rs
backend/migrations/: 20260313010000_init.sql  20260313020000_expand_settings_and_exports.sql  20260313030000_phase2_cqrs_async.sql  20260313040000_phase3_security_observability.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/auth/: handlers.rs  mod.rs  models.rs  service.rs
backend/src/categories/: mod.rs  repository.rs  service.rs  validation.rs
backend/src/events/: mod.rs  models.rs  service.rs  validation.rs
backend/src/exports/: handlers.rs  mod.rs  models.rs  repository.rs  service.rs
backend/src/reports/: handlers.rs  mod.rs  service.rs
backend/src/settings/: mod.rs  models.rs  repository.rs  service.rs
backend/src/shared/: auth.rs
backend/src/users/: models.rs
docs/: api.md  architecture.md  delivery-plan.md  demo-script.md  domain-model.md  erd.md  messaging.md  review-checklist.md  risk-register.md  runbook.md  test-coverage.md
frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.test.tsx  main.tsx
frontend/src/api/: client.test.ts  client.ts  query-utils.test.ts  query-utils.ts  types.ts
frontend/src/app/: App.test.tsx  App.tsx  router.test.tsx  router.tsx
frontend/src/components/: AppLayout.tsx  QueryState.tsx
frontend/src/features/auth/: auth-context.test.tsx  auth-context.tsx  auth-storage.ts
frontend/src/features/categories/: CategoryForm.test.tsx  CategoryForm.tsx
frontend/src/features/events/: EventForm.tsx
frontend/src/pages/: CalendarPage.test.tsx  CalendarPage.tsx  CategoriesPage.test.tsx  CategoriesPage.tsx  DashboardPage.test.tsx  DashboardPage.tsx  EventsPage.test.tsx  EventsPage.tsx  LoginPage.test.tsx  LoginPage.tsx  RegisterPage.test.tsx  RegisterPage.tsx  ReportsPage.test.tsx  ReportsPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx
frontend/src/test/: setup.ts  test-utils.tsx
ops/grafana/dashboards/: eventdesign-overview.json
ops/grafana/provisioning/dashboards/: dashboards.yml
ops/prometheus/: prometheus.yml
scripts/: smoke.sh
