[workspace]
members = [
    "apps/edge-api",
    "apps/identity-svc",
    "apps/event-command-svc",
    "apps/event-query-svc",
    "apps/report-svc",
    "apps/worker",
    "crates/cache",
    "crates/contracts",
    "crates/messaging",
    "crates/observability",
    "crates/persistence",
    "crates/shared-kernel",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
http = "1.3.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
printpdf = "0.7.0"
prost = "0.13.5"
protoc-bin-vendored = "3.2.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rust_xlsxwriter = "0.91.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2.0.17"
time = "0.3.47"
tokio = { version = "1.48.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["transport"] }
tonic-build = "0.12.3"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
