[package]
name = "db-migrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dotenvy.workspace = true
observability = { path = "../../crates/observability" }
persistence = { path = "../../crates/persistence" }
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
