[package]
name = "edge-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
contracts = { path = "../../crates/contracts" }
dotenvy.workspace = true
http.workspace = true
observability = { path = "../../crates/observability" }
persistence = { path = "../../crates/persistence" }
printpdf.workspace = true
redis.workspace = true
rust_xlsxwriter.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-kernel = { path = "../../crates/shared-kernel" }
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tonic.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
