[package]
name = "event-query-svc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cache = { path = "../../crates/cache" }
chrono.workspace = true
contracts = { path = "../../crates/contracts" }
dotenvy.workspace = true
observability = { path = "../../crates/observability" }
persistence = { path = "../../crates/persistence" }
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
