[package]
name = "report-svc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
contracts = { path = "../../crates/contracts" }
dotenvy.workspace = true
observability = { path = "../../crates/observability" }
persistence = { path = "../../crates/persistence" }
s3.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true
