[package]
name = "worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-nats.workspace = true
cache = { path = "../../crates/cache" }
chrono.workspace = true
dotenvy.workspace = true
futures.workspace = true
messaging = { path = "../../crates/messaging" }
observability = { path = "../../crates/observability" }
persistence = { path = "../../crates/persistence" }
printpdf.workspace = true
redis.workspace = true
rust_xlsxwriter.workspace = true
s3.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
