[package]
name = "observability"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
http.workspace = true
prometheus.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
